[package]
name = "wsdemo"
version = "0.1.0"
authors = ["xingyun86 <xingyun_ppshuai@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-broker = "0.3.0"
actix-files = "0.2"
actix-rt = "1.1"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-web-actors = "2.0"
actix-cors="0.2"
actix-identity="0.2"
actix-multipart="0.2"
async-std="1.5"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rand = "0.7"
openssl = "0.10.29"
diesel = { version = "^1.1.0", features = ["sqlite", "mysql", "r2d2"] }
r2d2 = "0.8"
r2d2_mysql="18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"